Added Tomato Plant, Updated Mappings

--- a/src/main/resources/assets/ymorefood/models/block/unknown_block.json
+++ b/src/main/resources/assets/ymorefood/models/block/unknown_block.json
@@ -1,6 +1,6 @@
 {
     "parent": "block/cube_all",
     "textures": {
-        "all": "ymorefood:blocks/unknown_block"
+        "all": "ymorefood:block/unknown_block"
     }
 }
