--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '0.5'
+version = '1.15.1-0.0.6pre1'
 group = 'shearshep22.foodmod' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'foodmod'
 
@@ -125,6 +125,16 @@ jar {
         ])
     }
 }
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+build.dependsOn sourcesJar
+
+artifacts {
+    archives sourcesJar
+}
+
 
 // Example configuration to allow publishing using the maven-publish task
 // we define a custom artifact that is sourced from the reobfJar output task
