--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -14,7 +14,7 @@ loaderVersion="[30,)" #mandatory (28 is current forge version)
 modId="shepfood" #mandatory
 
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-version="0.5" #mandatory
+version="0.6pre1" #mandatory
 
  # A display name for the mod
 displayName="Professor Shep's Food Mod" #mandatory
