--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -14,7 +14,7 @@ loaderVersion="[30,)" #mandatory (28 is current forge version)
 modId="shepfood" #mandatory
 
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-version="0.6pre1" #mandatory
+version="0.6" #mandatory
 
  # A display name for the mod
 displayName="Professor Shep's Food Mod" #mandatory
@@ -25,7 +25,7 @@ displayName="Professor Shep's Food Mod" #mandatory
 #displayURL="http://example.com/" #optional
 
 # A file name (in the root of the mod JAR) containing a logo for display
-#logoFile="examplemod.png" #optional
+logoFile="logo.png" #optional
 
 # A text field displayed in the mod UI
 credits="ShearShep22, ChocolateXDude" #optional
