--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -14,7 +14,7 @@ loaderVersion="[30,)" #mandatory (28 is current forge version)
 modId="shepfood" #mandatory
 
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-version="0.6" #mandatory
+version="0.8.0" #mandatory
 
  # A display name for the mod
 displayName="Professor Shep's Food Mod" #mandatory
@@ -53,7 +53,7 @@ Eat onions at your own risk.
     side="BOTH"
     
 # Here's another dependency
-[[dependencies.tutorialmod]]
+[[dependencies.shepfood]]
     modId="minecraft"
     mandatory=true
     versionRange="[1.15.1]"
