--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -14,7 +14,7 @@ loaderVersion="[30,)" #mandatory (28 is current forge version)
 modId="shepfood" #mandatory
 
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-version="0.8.1" #mandatory
+version="1.0.2" #mandatory
 
  # A display name for the mod
 displayName="Professor Shep's Food Mod" #mandatory
@@ -28,7 +28,7 @@ displayName="Professor Shep's Food Mod" #mandatory
 logoFile="logo.png" #optional
 
 # A text field displayed in the mod UI
-credits="ShearShep22, ChocolateXDude" #optional
+credits="ShearShep22, ChocolateXdude" #optional
 
 # A text field displayed in the mod UI
 authors="ShearShep22" #optional
